# BackTrack

./: .env  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/dependencies/: audio_manager.py  auth.py  database.py  users.py
backend/app/api/v1/: __init__.py  auth.py  author.py  files.py  group.py  playlist.py  song.py  users.py
backend/app/audio_manager/: audio_manager.py  decode_audio.py  encode_audio.py  events.py  learner.py
backend/app/core/: constant.py  events.py  security.py  token.py
backend/app/core/settings/: app.py  dev.py  prod.py  test.py
backend/app/database/: events.py
backend/app/database/migraions/: env.py
backend/app/database/migraions/versions/: 0bf3a35ccc81_added_comment_song_table_constrait_to_.py  2f6fef0cc245_created_a_playlist_model.py  4aed319b149c_added_file_table.py  679bfb83c77e_added_comment_tables.py  69215f253bc8_added_file_duration_field.py  6fb228e19a95_added_group.py  72d2a82b5bca_created_author_model.py  791f8ccb0d5a_added_foreign_key_constraints.py  aa99c319bc58_added_song_models.py  e802aa3a99c1_fixing_not_being_able_to_delete_song.py
backend/app/database/repositories/: authors.py  comment.py  files.py  groups.py  playlists.py  songs.py  users.py
backend/app/models/: __init__.py  author.py  comment.py  comment_song.py  domain.py  file.py  group.py  group_author.py  playlist.py  playlist_song.py  song.py  song_release.py  song_release_author.py  song_release_file.py  song_release_group.py  user.py
backend/app/schemas/: author.py  comment.py  files.py  group.py  message.py  playlist.py  range.py  song.py  user.py
backend/app/services/: authors.py  files.py  groups.py  playlists.py  songs.py  users.py
backend/app/static/public/test/: test.html  test2.html
backend/app/utils/: app_exceptions.py  custom_logging.py  filter_song_releases_with_filter.py  service_result.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_users.py
frontend/: Dockerfile  README.md  author.html  authors.html  group.html  groups.html  home.html  index.html  nginx.conf  package-lock.json  package.json  playlist.html  playlists.html  pnpm-lock.yaml  pnpm-workspace.yaml  song.html  songs.html  tsconfig.app.json  vite.config.ts
frontend/backtrack/: package.json  pnpm-lock.yaml
frontend/css/: base.css  player.css  playlists.css  songs.css
frontend/demo/: author.html  authors.html  group.html  groups.html  home.html  playlist.html  playlists.html  song.html  songs.html
frontend/demo/css/: authors.css  base.css  comments.css  files.css  groups.css  player.css  playlists.css  songs.css
frontend/public/: site.webmanifest
frontend/src/app/entrypoint/: App.tsx  main.tsx
frontend/src/app/providers/: AuthContextProvider.tsx  AuthorsContextProvider.tsx  ContextProvider.tsx  GroupsContextProvider.tsx  HeaderContextProvider.tsx  PlayerContextProvider.tsx  PlaylistContextProvider.tsx  QueryClientProvider.tsx  (+1 more)
reverse-proxy/: nginx.conf
storage/learn/: .gitignore  audio_manager.py  decode_audio.py  dims.md  encode_audio.py  learner.py  learner_conv.py  learner_fft_metrics.py  texgen.py
(+470 files in other folders)
